@@ -24,6 +24,7 @@
     <tr>
       <td class="statusOdd">Command:</td>
       <td class="statusOdd">
+        <input type='hidden' id="opt_persistent" name='persistent' value="comments">
         <select name="quick_command" id="quick_command" onChange="check_selected_command(this.value)">
           [% IF c.config.cmd_quick_status.reschedule %]
           <option value="1">reschedule next check</option>
@@ -95,7 +96,7 @@
         <table border=0 cellpadding=0 cellspacing=0>
           <tr><td onclick="javascript:toggleCheckBox('opt2')">Sticky Acknowledgement:</td><td><input type='checkbox' id="opt2" name='sticky_ack'[% IF c.config.cmd_defaults.sticky_ack %] checked[% END %]></td></tr>
           <tr><td onclick="javascript:toggleCheckBox('opt3')">Send Notification:</td><td><input type='checkbox' id="opt3" name='send_notification'[% IF c.config.cmd_defaults.send_notification %] checked[% END %]></td></tr>
-          <tr><td onclick="javascript:toggleCheckBox('opt4')">Persistent Comment:</td><td><input type='checkbox' id="opt4" name='persistent'[% IF c.config.cmd_defaults.persistent_ack %] checked[% END %]></td></tr>
+          <tr><td onclick="javascript:toggleCheckBox('opt4')">Persistent Comment:</td><td><input type='checkbox' id="opt4" name='persistent_ack'[% IF c.config.cmd_defaults.persistent_ack %] checked[% END %]></td></tr>
         </table>
       </td>
     </tr>
@@ -103,7 +104,7 @@
       <td class="statusOdd" valign="top">Options:</td>
       <td class="statusOdd">
         <table border=0 cellpadding=0 cellspacing=0>
-          <tr><td onclick="javascript:toggleCheckBox('opt5')">Persistent :</td><td><input type='checkbox' id="opt5" name='persistent'[% IF c.config.cmd_defaults.persistent_comments %] checked[% END %]></td></tr>
+          <tr><td onclick="javascript:toggleCheckBox('opt5')">Persistent :</td><td><input type='checkbox' id="opt5" name='persistent_comments'[% IF c.config.cmd_defaults.persistent_comments %] checked[% END %]></td></tr>
         </table>
       </td>
     </tr>
